jena-shex/src/test/files/spec/validation/nPlus1-greedy-rewrite.shex
BASE <http://a.example.org/>
PREFIX : <http://a.example/>
PREFIX xsd: <http://www.w3.org/2001/XMLSchema#>

<S> { :a [1]; (:a [2]+ | :a [3]); :a [4]* }
