jena-shex/src/test/files/spec/negativeSyntax/tripleConsraint-with-two-cardinalities.shex
# tripleConsraint with two cardinalities
<http://a.example/IssueShape> {
   <http://a.example/p1> . +*
}
